# hermes-agent-self-evolution

./: .gitignore  README.md  baseline_eval.py  pyproject.toml
autoresearch/: README.md  generate_datasets.py
autoresearch/phase2_tool_descriptions/: evaluate.py  program.md
autoresearch/phase3_system_prompts/: evaluate.py  program.md
datasets/prompts/: DEFAULT_AGENT_IDENTITY_eval.jsonl  MEMORY_GUIDANCE_eval.jsonl  SESSION_SEARCH_GUIDANCE_eval.jsonl  SKILLS_GUIDANCE_eval.jsonl
datasets/tools/: combined_eval.jsonl  devtools_v1.jsonl
evolution/core/: config.py  dataset_builder.py  fitness.py
evolution/prompts/: __init__.py  evolve_prompt_section.py  prompt_section_module.py  prompt_selection_evaluator.py
evolution/tools/: __init__.py  __main__.py  dataset_builder.py  description_writer.py  evaluator.py  evolve_tool_descriptions.py  schema_loader.py  tool_description_module.py  tool_selection_evaluator.py
