[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent-self-evolution"
version = "0.2.0"
description = "Evolutionary self-improvement for Hermes Agent — optimize skills, prompts, and tool descriptions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["llm", "optimization", "evolution", "hermes", "agent", "autoresearch"]

dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
dspy = [
    "dspy>=3.0.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ETHNHUNT/hermes-agent-self-evolution"
Repository = "https://github.com/ETHNHUNT/hermes-agent-self-evolution"

[tool.setuptools.packages.find]
include = ["evolution*", "autoresearch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
